# bluetooth-rust

./: .gitignore  Cargo.toml  build.sh
bluetooth-rust/: Cargo.toml  README.md
bluetooth-rust/examples/linux/: main.rs
bluetooth-rust/src/: android.rs  bluetooth_uuid.rs  lib.rs  linux.rs  sdp.rs  windows.rs
bluetooth-rust/src/android/: device.rs  socket.rs
examples/android/: Cargo.toml  mobile.toml
examples/android/.cargo/: config.toml
examples/android/src/: lib.rs
src/: android.rs  bluetooth_uuid.rs  lib.rs  linux.rs
src/android/: device.rs
